--- a/StudentManagementWebApp/Views/Shared/_ConfirmForm.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_ConfirmForm.cshtml
@@ -1,8 +1,8 @@
 ﻿<div id="confirmModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="confirmModalTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header" style="color: #000">
-                <h5 class="modal-title" id="confirmModalTitle">Hệ Thống</h5>
+            <div class="modal-header bg-gradient-warning" style="color: #000">
+                <h5 class="modal-title" id="confirmModalTitle" style="color: #fff;">Hệ Thống</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
