--- a/StudentManagementWebApp/Views/Student/Index.cshtml
+++ b/StudentManagementWebApp/Views/Student/Index.cshtml
@@ -115,17 +115,18 @@
 <div id="del_confirmModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="del_confirmModalTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header" style="color: #000; background-color: #ed6161ab">
-                <h5 class="modal-title" id="confirmModalTitle">Hệ Thống</h5>
+            <div class="modal-header bg-danger" style="color: #000;">
+                <h5 class="modal-title" id="confirmModalTitle" style="color: #fff;">Cảnh Báo</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body" style="color: #000">
                 <p>Bạn có chắc chắn muốn xóa sinh viên có mã <strong id="delValName"></strong> ?</p>
+                <p>Dữ liệu có thể bị mất vĩnh viễn!</p>
             </div>
             <div class="modal-footer">
-                <button id="delete" type="button" class="btn btn-primary" aria-label="Save" onclick="deleteData()">Xóa</button>
+                <button id="delete" type="button" class="btn bg-gradient-danger text-white" aria-label="Save" onclick="deleteData()">Xóa</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
             </div>
         </div>
