--- a/StudentManagementWebApp/Views/Shared/_SideBar.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_SideBar.cshtml
@@ -36,19 +36,19 @@
         </li>
 
         <!-- Nav Item - Utilities Collapse Menu -->
-        <!-- Nav Item - Utilities Collapse Menu -->
         <li class="nav-item">
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                aria-expanded="true" aria-controls="collapseUtilities">
                 <i class="fas fa-fw fa-wrench"></i>
-                <span>Thay đổi thông tin</span>
+                <span>Cập nhật thông tin</span>
             </a>
             <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Custom Utilities:</h6>
-                    <a class="collapse-item" href="#">Coming Soon</a>
-                    <a class="collapse-item" href="#">Coming Soon</a>
+                    <h6 class="collapse-header">Sinh Viên</h6>
+                    <a class="collapse-item" href="#">Đăng ký học phần</a>
+                    <a class="collapse-item" href="#">Cập nhật môn</a>
+                    <a class="collapse-item" href="#">Cập nhật điểm</a>
                 </div>
             </div>
         </li>
