--- a/StudentManagementWebApp/Content/Customs/Custom_1.razor.css
+++ b/StudentManagementWebApp/Content/Customs/Custom_1.razor.css
@@ -52,3 +52,7 @@
 table.dataTable tbody td{
     vertical-align: middle;
 }
+
+.btn-group > .btn-group:not(:first-child), .btn-group > .btn:not(:first-child) {
+     margin-left: 0px; 
+}
