UPDATE Role + Permission ver 0.1.1

--- a/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
@@ -110,6 +110,9 @@
         $(document).ready(function () {
             $('#table_id').DataTable();
         });
+        $(document).ready(function () {
+            $('#table_id1').DataTable();
+        });
         $(() => {
             $('#submitBtn').on('click', (e) => {
                 $('#Form').submit();
