--- a/StudentManagementWebApp/Views/Shared/_SideBar.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_SideBar.cshtml
@@ -47,7 +47,7 @@
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Sinh Viên</h6>
                     <a class="collapse-item" href="#">Đăng ký học phần</a>
-                    @Html.ActionLink("Đăng ký học phần", "DKHP", null, htmlAttributes: new { @class="collapse-item"})
+                    @Html.ActionLink("Đăng ký học phần", "DKHP", "Student", null, htmlAttributes: new { @class="collapse-item"})
                     <a class="collapse-item" href="#">Cập nhật điểm</a>
                     <h6 class="collapse-header">Hệ Thống</h6>
                     <a class="collapse-item" href="#">Cập nhật môn</a>
