--- a/StudentManagementWebApp/Views/Student/SearchStudentToCR.cshtml
+++ b/StudentManagementWebApp/Views/Student/SearchStudentToCR.cshtml
@@ -1,16 +1,23 @@
-﻿@using (Html.BeginForm("SearchForm", "Student", FormMethod.Post, htmlAttributes: new { @id = "Form" }))
+﻿
+@{
+    ViewBag.Title = "Cổng Vào Hệ Thống Đăng Ký Học Phần";
+}
+@using (Html.BeginForm("PreDKHP", "Student", FormMethod.Post, htmlAttributes: new { @id = "Form" }))
 {
-<div class="search-form info-group mt-5">
-    <div class="form-group row">
-        <div class="col-6 w154" style="font-size: 20px">Mã sinh viên: </div>
-        <span class="col-6 w154">
-            <input type="text" name="" id="" placeholder="Nhập mã sinh viên">    
-        </span> 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Tiếp theo" class="btn btn-default" />
+    <div class="search-form info-group mt-5">
+        <div class="form-group row">
+            <div class="col-6 w154" style="font-size: 20px">Mã sinh viên: </div>
+            <span class="col-6 w154">
+                <input type="text" name="id" id="" placeholder="Nhập mã sinh viên">
+                <div class="text-danger">@ViewBag.Error <span class="font-weight-bolder">@ViewBag.Id</span></div>
+
+            </span>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Tiếp theo" class="btn btn-outline-primary" />
+                </div>
             </div>
         </div>
     </div>
-</div>
+
 }
