Updated( New feature): Display subject list that student haven't registered yet

--- a/StudentManagementWebApp/Views/Student/CourseRegister.cshtml
+++ b/StudentManagementWebApp/Views/Student/CourseRegister.cshtml
@@ -1,7 +1,5 @@
 ﻿@model StudentManagementWebApp.Models.Student
-@using StudentManagementWebApp.Models
-@{
-    
+@{   
     ViewBag.Title = "Cổng Thông Tin Đăng Ký Học Phần";
 }
 
@@ -19,6 +17,7 @@
             <thead>
                 <tr>
                     <th class="text-center">STT</th>
+                    <th class="text-center">Mã Môn</th>
                     <th class="text-center">Tên Môn</th>
                     <th class="text-center">Số Tiết</th>
                     <th class="text-center">Thêm vào danh sách đăng ký</th>
@@ -31,10 +30,11 @@
                     {
                         <tr>
                             <td>@stt</td>
+                            <td>@s.SubjectId</td>
                             <td>@s.Name</td>
                             <td>@s.NumOfLessons</td>
                             <td>
-                                @Html.ActionLink("+","AddToTmpList", "Student", new { Name = s.Name}, htmlAttributes: new { @class="btn"})
+                                @Html.ActionLink("+","AddToTmpList", "Student", new { id = Model.Id ,subId = s.SubjectId}, htmlAttributes: new { @class="btn"})
                             </td>
                         </tr>
                         stt++;
