update Error handler

--- a/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
@@ -150,6 +150,9 @@
                 }
             });
         }
+        //var addSubjectIntoCargo(val){
+
+        //}
     </script>
     <!-- Scripts for chat hub-->
     <script src="~/Scripts/jquery.signalR-2.4.3.min.js"></script>
